Testing out the GIT GUI
Updated secondary nav verbiage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<nav class="grid__col grid__col--3-of-6">
 					<ul class="secondary-nav-list">
 						<li class="secondary-nav-list-item">
-							<a href="">County Executive</a>
+							<a href="">Executive</a>
 						</li>
 						<li class="secondary-nav-list-item">
 							<a href="">County Council</a>
