--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Baltimore County Homepage Redesign</title>
-		<link rel="stylesheet" type="text/css" href="stylesheets/main.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css"/>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/slick.min.js"></script>
-		<script src="js/template.js"></script>
+		<script type="text/javascript" src="assets/js/lib/slick.min.js"></script>
+		<script src="assets/js/template.js"></script>
 	</head>
 	<body>
 		<header class="header">
