Added exclamation to Baltimore County Government
Added exclamation to Baltimore County Government

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="container">
 				<div class="brand eight columns">
 					<img src="" alt="" class="county-seal" />
-					<h1>Baltimore County Governement</h1>
+					<h1>Baltimore County Governement!</h1>
 				</div>
 				<nav class="eight columns">
 					<ul class="primary-nav-list inline-list">
