Removed Stay Connected Section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="container">
 				<div class="brand eight columns">
 					<img src="" alt="" class="county-seal" />
-					<h1>Baltimore County Governement!!</h1>
+					<h1>Baltimore County Governement</h1>
 				</div>
 				<nav class="eight columns">
 					<ul class="primary-nav-list inline-list">
@@ -119,42 +119,42 @@
 		<section class="carousel-container container">
 			<div class="carousel sixteen columns">
 				<div class="corousel-item">
-					<img src="img/courthouse1.jpg" alt="" />
+					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
 				<div class="corousel-item">
-					<img src="img/courthouse1.jpg" alt="" />
+					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
 				<div class="corousel-item">
-					<img src="img/courthouse1.jpg" alt="" />
+					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
 				<div class="corousel-item">
-					<img src="img/courthouse1.jpg" alt="" />
+					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
 				<div class="corousel-item">
-					<img src="img/courthouse1.jpg" alt="" />
+					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
 				<div class="corousel-item">
-					<img src="img/courthouse1.jpg" alt="" />
+					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
@@ -241,38 +241,7 @@
 			</section>
 		</section>
 		</div>
-		<section class="social-media">
-			<div class="container">
-			<h1 class="eight columns">Stay Connected</h1>
-			<ul class="social-media-list social-media-list-large eight columns inline-list">
-				<li class="social-media-list-item social-media-list-item-facebook">
-					<a href="">
-						<img src="" alt="">Social Icon
-					</a>
-				</li>
-				<li class="social-media-list-item social-media-list-item-twitter">
-					<a href="">
-						<img src="" alt="">Social Icon
-					</a>
-				</li>
-				<li class="social-media-list-item social-media-list-item-photos">
-					<a href="">
-						<img src="" alt="">Social Icon
-					</a>
-				</li>
-				<li class="social-media-list-item social-media-list-item-youtube">
-					<a href="">
-						<img src="" alt="">Social Icon
-					</a>
-				</li>
-				<li class="social-media-list-item social-media-list-item-bcnow">
-					<a href="">
-						<img src="" alt="">Social Icon
-					</a>
-				</li>
-			</ul>
-			</div>
-		</section>
+		
 		<footer class="footer">
 			<section class="primary-footer container">
 			<section class="county-information four columns">
