Updated county information section html
Added classess and moved a container class to fit the app to the psd

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 				</div>
 				</div>
 		</section>
-		<div class="container">
+		<div class="county-information">
+		<div class="county-information-container container">
 		<section class="news-feed ten columns">
 			<ul class="news-feed-list">
 				<li class="news-feed-item">
@@ -240,6 +241,7 @@
 				<a title="Find your representative." href="http://egov2.baltimorecountymd.gov/votingweb/Address.aspx?pageid=3">Who is my Representative?</a>
 			</section>
 		</section>
+		</div>
 		</div>
 		
 		<footer class="footer">
