--- a/index.html
+++ b/index.html
@@ -118,42 +118,42 @@
 		</section>
 		<section class="carousel-container container">
 			<div class="carousel sixteen columns">
-				<div class="corousel-item">
+				<div class="carousel-item">
 					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
-				<div class="corousel-item">
+				<div class="carousel-item">
 					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
-				<div class="corousel-item">
+				<div class="carousel-item">
 					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
-				<div class="corousel-item">
+				<div class="carousel-item">
 					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
-				<div class="corousel-item">
+				<div class="carousel-item">
 					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
 						<span class="carousel-item-description">Some description here.</span>
 					</div>
 				</div>
-				<div class="corousel-item">
+				<div class="carousel-item">
 					<img src="assets/img/courthouse1.jpg" alt="" />
 					<div class="carousel-message">
 						<h3 class="carousel-item-headline">Some Headline Text</h3>
