Updated the class for the county-map in the footer
Removes conflict with the main section of the homepage

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 		
 		<footer class="footer">
 			<section class="primary-footer container">
-			<section class="county-information four columns">
+			<section class="county-map four columns">
 				<img src="" alt="">
 				<p>Address Goes Here</p>
 			</section>
