--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css"/>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/js/lib/slick.min.js"></script>
+		<script type="text/javascript" src="assets/js/lib/handlebars.js"></script>
 		<script src="assets/js/template.js"></script>
 	</head>
 	<body>
