Added container for flickr images.

--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
 		</section>
 		<div class="county-information">
 		<div class="county-information-container container">
+			<div class="county-photo-feed">
+			</div>
 		<section class="news-feed ten columns">
 			<div class="SESyndicationModule">
   <div class="feedDetails">
