Updated structure based on the psd

--- a/index.html
+++ b/index.html
@@ -165,12 +165,13 @@
 		</section>
 		<div class="county-information">
 		<div class="county-information-container container">
-			<div class="county-photo-feed">
-			</div>
+		
 		<section class="news-feed ten columns">
+			<h2 class="homepage">Baltimore County Now</h2>
+			<div class="county-photo-feed"></div><!--flickr feed -->
 			<div class="SESyndicationModule">
   <div class="feedDetails">
-  	<h2 class="homepage">Baltimore County Now</h2>
+  	
     <h1>
       <a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow">Baltimore County Now</a>
     </h1>
