--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 		</section>
 		<section class="elected-officials six columns">
 			<section class="county-executive">
-				<img src="http://www.trbimg.com/img-5062feeb/turbine/bs-md-co-recher-folo-20120925-001/600" alt="" width="100%">
+				<h2 class="homepage">Baltimore County Now</h2>
+				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
 				<ul class="social-media-list social-media-list-small inline-list">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
