Updated county council section
also updated h2 on the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="assets/js/lib/handlebars.js"></script>
 		<script src="assets/js/template.js"></script>
 	</head>
-	<body>
+	<body class="homepage">
 		<header class="header">
 			<section class="secondary-nav">
 				<div class="container">
@@ -167,7 +167,7 @@
 		<div class="county-information-container container">
 		
 		<section class="news-feed ten columns">
-			<h2 class="homepage">Baltimore County Now</h2>
+			<h2>Baltimore County Now</h2>
 			<div class="county-photo-feed"></div><!--flickr feed -->
 			<div class="SESyndicationModule">
   <div class="feedDetails">
@@ -220,7 +220,7 @@
 		</section>
 		<section class="elected-officials six columns">
 			<section class="county-executive">
-				<h2 class="homepage">Baltimore County Now</h2>
+				<h2>County Executive</h2>
 				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
 				<ul class="social-media-list social-media-list-small inline-list">
 					<li class="social-media-list-item social-media-list-item-facebook">
@@ -259,7 +259,8 @@
 				</ul>
 			</section>
 			<section class="county-council">
-				<p>Carousel Goes here</p>
+				<h2>County Council</h2>
+				<img src="assets/img/county-council.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
 				<a title="Find your representative." href="http://egov2.baltimorecountymd.gov/votingweb/Address.aspx?pageid=3">Who is my Representative?</a>
 			</section>
 		</section>
