Added inline list class to match psd

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 						</a>
 					</li>
 				</ul>
-				<ul class="county-executive-about-list">
+				<ul class="county-executive-about-list inline-list">
 					<li class="county-executive-about-list-item">
 						<a href="">Biography</a>
 					</li>
