--- a/index.html
+++ b/index.html
@@ -91,32 +91,26 @@
 				</div>
 			</section>
 		</header>
-		<section class="primary-search container">
-			<div class="sixteen columns">
-				<input class="input primary-search-input" type="text" />
-				<button class="btn primary-search-btn">Search</button>
-				<div class="top-visited">
-					<span class="top-visited-label">Top Visited:</span>
-					<ul class="top-visited-list inline-list">
-						<li class="top-visited-list-item">
-							<a href="">Item 1</a>
-						</li>
-						<li class="top-visited-list-item">
-							<a href="">Item 2</a>
-						</li>
-						<li class="top-visited-list-item">
-							<a href="">Item 3</a>
-						</li>
-						<li class="top-visited-list-item">
-							<a href="">Item 4</a>
-						</li>
-						<li class="top-visited-list-item">
-							<a href="">Item 5</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</section>
+		<div class="search">
+		  <div class="search-input-container">
+		    <button>Search</button>
+		    <div class="search-text">
+		      <input type="text" class="search-input" placeholder="Find Baltimore County Services, Agencies, Locations, People and More" />
+		    </div>
+		    <div class="clearfix"></div>
+		  </div>
+		  <div class="top-visited">
+		    <span class="top-visited-label">Top Visited</span>
+		    <ul class="top-visited-list">
+		      <li><a href="#">Jobs</a></li>
+		      <li><a href="#">Pay Property Tax</a></li>
+		      <li><a href="#">Trash and Recycling</a></li>
+		      <li><a href="#">Jury Duty</a></li>
+		      <li><a href="#">Pay Traffic Tickets</a></li>
+		    </ul>
+		    <div class="clearfix"></div>
+		  </div>
+		</div>
 		<section class="carousel-container container">
 			<div class="carousel sixteen columns">
 				<div class="carousel-item">
