Added county seal

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			<section class="primary-nav">
 			<div class="container">
 				<div class="brand eight columns">
-					<img src="" alt="" class="county-seal" />
-					<h1>Baltimore County Governement</h1>
+					<img src="assets/img/header-county-seal.png" alt="Baltimore County Maryland Seal" class="county-seal" />
+					<h1 class="brand-title">Baltimore County<span class="brand-title_small">Government</span></h1>
 				</div>
 				<nav class="eight columns">
 					<ul class="primary-nav-list inline-list">
