--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			<section class="county-executive">
 				<h2>County Executive</h2>
 				<img src="assets/img/county-executive.jpg" alt="Kevin Kamenetz, Baltimore County's County Executive" />
-				<ul class="social-media-list social-media-list-small inline-list">
+				<ul class="social-media-list social-media-list-gold social-media-list-small inline-list">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
 						</a>
