Updated primary nav to match psd

--- a/index.html
+++ b/index.html
@@ -64,27 +64,32 @@
 				</div>
 				</div>
 			</section>
-			<section class="primary-nav">
-			<div class="container">
-				<div class="brand eight columns">
-					<img src="assets/img/header-county-seal.png" alt="Baltimore County Maryland Seal" class="county-seal" />
-					<h1 class="brand-title">Baltimore County<span class="brand-title_small">Government</span></h1>
-				</div>
-				<nav class="eight columns">
-					<ul class="primary-nav-list inline-list">
-						<li class="primary-nav-list-item">
-							<a href="">I Want To...</a>
-						</li>
-						<li class="primary-nav-list-item">
-							<a href="">I'm Looking For...</a>
-						</li>
-						<li class="primary-nav-list-item">
-							<a href="">I Need to Contact...</a>
-						</li>
-					</ul>
-				</nav>
-				</div>
-			</section>
+			<div class="primary-header">
+			  <div class="container">
+			    <div class="brand">
+			      <img class="brand-logo" src="assets/img/header-county-seal.png" height="84" width="84" />
+			      <h1 class="brand-heading">Baltimore County<br><span class="uppercase smaller-text">Government</span></h1>
+			    </div>
+			    <ul class="primary-nav" role="navigation">
+			      <li class="primary-nav-item">
+			        <h2 class="primary-nav-item__headline">
+			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Want To...<br><span class="primary-nav-item__tagline">Report Issues, Follow Up, Apply</span></a>
+			        </h2>
+			      </li>
+			      <li class="primary-nav-item">
+			        <h2 class="primary-nav-item__headline">
+			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I'm Looking For...<br><span class="primary-nav-item__tagline">Resident, Visitor, or Business Info</span></a>
+			        </h2>
+			      </li>
+			      <li class="primary-nav-item">
+			        <h2 class="primary-nav-item__headline">
+			          <a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Need to Contact...<br><span class="primary-nav-item__tagline">An Agency, My Rep, An Employee</span></a>
+			        </h2>
+			      </li>
+			    </ul>
+			    <div class="clearfix"></div>
+			  </div>
+			</div>
 		</header>
 		<div class="search">
 		  <div class="search-input-container">
