Added County Shape to footer

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 		<footer class="footer">
 			<section class="primary-footer container">
 			<section class="county-map four columns">
-				<img src="" alt="">
+				<img src="assets/img/footer-county-shape.png" alt="">
 				<p>Address Goes Here</p>
 			</section>
 			<section class="county-help four columns">
