changed wording on top left menu per psd

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		  <div class="search-input-container">
 		    <button>Search</button>
 		    <div class="search-text">
-		      <input type="text" class="search-input" placeholder="Find Baltimore County Services, Agencies, Locations, People and More" />
+		      <input type="text" class="search-input" placeholder="Search for agencies, services and more..." />
 		    </div>
 		    <div class="clearfix"></div>
 		  </div>
