Updated the columns to better match psd

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header class="header">
 			<section class="secondary-nav">
 				<div class="container">
-				<nav class="six columns">
+				<nav class="five columns">
 					<ul class="secondary-nav-list inline-list">
 						<li class="secondary-nav-list-item">
 							<a href="">County Executive</a>
@@ -26,7 +26,7 @@
 						</li>
 					</ul>
 				</nav>
-				<ul class="social-media-list social-media-list-small inline-list six columns">
+				<ul class="social-media-list social-media-list-small inline-list seven columns">
 					<li class="social-media-list-item social-media-list-item-facebook">
 						<a href="">
 						</a>
