Added promotions carousel

--- a/index.html
+++ b/index.html
@@ -113,49 +113,44 @@
 		</div>
 		<section class="carousel-container container">
 			<div class="carousel sixteen columns">
-				<div class="carousel-item">
-					<img src="assets/img/courthouse1.jpg" alt="" />
-					<div class="carousel-message">
-						<h3 class="carousel-item-headline">Some Headline Text</h3>
-						<span class="carousel-item-description">Some description here.</span>
-					</div>
+				<div class="promotions">
+				  <div class="promotions-item">
+				    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
+				    <div class="promotions-message">
+				      <h2>Adopt a lost or adoptable pet</h2>
+				      <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
+				    </div>
+				  </div>
+				  <div class="promotions-item">
+				    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" />
+				    <div class="promotions-message">
+				      <h2>Follow Snowfighter</h2>
+				      <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
+				    </div>
+				  </div>
+				  <div class="promotions-item">
+				    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" />
+				    <div class="promotions-message">
+				      <h2>Walk safe to your next destination</h2>
+				      <p>Make sure to follow crosswalks to ensure your safety, find out <a href="#" title="Find out more about walking safe">more information</a> about walking safe.</p>
+				    </div>
+				  </div>
+				  <div class="promotions-item">
+				    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" />
+				    <div class="promotions-message">
+				      <h2>Question about Stormwater?</h2>
+				      <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
+				    </div>
+				  </div>
+				  <div class="promotions-item">
+				    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
+				    <div class="promotions-message">
+				      <h2>Everyone Likes More Dogs</h2>
+				      <p>It's true, <a href="#" title="View more pets">find out more</a>.</p>
+				    </div>
+				  </div>
 				</div>
-				<div class="carousel-item">
-					<img src="assets/img/courthouse1.jpg" alt="" />
-					<div class="carousel-message">
-						<h3 class="carousel-item-headline">Some Headline Text</h3>
-						<span class="carousel-item-description">Some description here.</span>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="assets/img/courthouse1.jpg" alt="" />
-					<div class="carousel-message">
-						<h3 class="carousel-item-headline">Some Headline Text</h3>
-						<span class="carousel-item-description">Some description here.</span>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="assets/img/courthouse1.jpg" alt="" />
-					<div class="carousel-message">
-						<h3 class="carousel-item-headline">Some Headline Text</h3>
-						<span class="carousel-item-description">Some description here.</span>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="assets/img/courthouse1.jpg" alt="" />
-					<div class="carousel-message">
-						<h3 class="carousel-item-headline">Some Headline Text</h3>
-						<span class="carousel-item-description">Some description here.</span>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="assets/img/courthouse1.jpg" alt="" />
-					<div class="carousel-message">
-						<h3 class="carousel-item-headline">Some Headline Text</h3>
-						<span class="carousel-item-description">Some description here.</span>
-					</div>
-				</div>
-				</div>
+			</div>
 		</section>
 		<div class="county-information">
 		<div class="county-information-container container">
