Added headlines to primary footer

--- a/index.html
+++ b/index.html
@@ -255,12 +255,14 @@
 			<section class="primary-footer container">
 			<section class="county-map four columns">
 				<img src="assets/img/footer-county-shape.png" alt="">
-				<p>Historic Courthouse</br>
+					<h2>Baltimore County Government</h2>
+					<p>Historic Courthouse</br>
 					400 Washington Avenue</br>
 					Towson, MD 21204</p>
 					<p><a href="http://mapq.st/rqwGxR" title="Directions">Directions &gt;&gt;</a></p>
 			</section>
 			<section class="county-help four columns">
+				<h2>Help</h2>
 				<ul class="county-help-list">
 					<li class="county-help-list-item">
 						<a href="">Phone Numbers</a>
@@ -274,6 +276,7 @@
 				</ul>
 			</section>
 			<section class="tranlate-page four columns">
+				<h2>Translate</h2>
 				<ul class="translate-page-list">
 					<li class="american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
 					<li class="translate-page-list-item translate-page-list-item-arabic">
@@ -294,6 +297,7 @@
 				</ul>
 			</section>
 			<section class="county-awards four columns">
+				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
 						<img src="http://baltimorecountymd.gov/sebin/n/b/footer-map-digital-counties.jpg" alt="" />
