--- a/index.html
+++ b/index.html
@@ -91,67 +91,69 @@
 			  </div>
 			</div>
 		</header>
-		<div class="search">
-		  <div class="search-input-container">
-		    <button>Search</button>
-		    <div class="search-text">
-		      <input type="text" class="search-input" placeholder="Search for agencies, services and more..." />
-		    </div>
-		    <div class="clearfix"></div>
-		  </div>
-		  <div class="top-visited">
-		    <span class="top-visited-label">Top Visited</span>
-		    <ul class="top-visited-list">
-		      <li><a href="#">Jobs</a></li>
-		      <li><a href="#">Pay Property Tax</a></li>
-		      <li><a href="#">Trash and Recycling</a></li>
-		      <li><a href="#">Jury Duty</a></li>
-		      <li><a href="#">Pay Traffic Tickets</a></li>
-		    </ul>
-		    <div class="clearfix"></div>
-		  </div>
-		</div>
-		<section class="carousel-container container">
-			<div class="carousel sixteen columns">
-				<div class="promotions">
-				  <div class="promotions-item">
-				    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
-				    <div class="promotions-message">
-				      <h2>Adopt a lost or adoptable pet</h2>
-				      <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
-				    </div>
-				  </div>
-				  <div class="promotions-item">
-				    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" />
-				    <div class="promotions-message">
-				      <h2>Follow Snowfighter</h2>
-				      <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
-				    </div>
-				  </div>
-				  <div class="promotions-item">
-				    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" />
-				    <div class="promotions-message">
-				      <h2>Walk safe to your next destination</h2>
-				      <p>Make sure to follow crosswalks to ensure your safety, find out <a href="#" title="Find out more about walking safe">more information</a> about walking safe.</p>
-				    </div>
-				  </div>
-				  <div class="promotions-item">
-				    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" />
-				    <div class="promotions-message">
-				      <h2>Question about Stormwater?</h2>
-				      <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
-				    </div>
-				  </div>
-				  <div class="promotions-item">
-				    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
-				    <div class="promotions-message">
-				      <h2>Everyone Likes More Dogs</h2>
-				      <p>It's true, <a href="#" title="View more pets">find out more</a>.</p>
-				    </div>
-				  </div>
-				</div>
+		<div class="promotions-container">
+			<div class="search">
+			  <div class="search-input-container">
+			    <button>Search</button>
+			    <div class="search-text">
+			      <input type="text" class="search-input" placeholder="Search for agencies, services and more..." />
+			    </div>
+			    <div class="clearfix"></div>
+			  </div>
+			  <div class="top-visited">
+			    <span class="top-visited-label">Top Visited</span>
+			    <ul class="top-visited-list">
+			      <li><a href="#">Jobs</a></li>
+			      <li><a href="#">Pay Property Tax</a></li>
+			      <li><a href="#">Trash and Recycling</a></li>
+			      <li><a href="#">Jury Duty</a></li>
+			      <li><a href="#">Pay Traffic Tickets</a></li>
+			    </ul>
+			    <div class="clearfix"></div>
+			  </div>
 			</div>
-		</section>
+			<section class="carousel-container container">
+				<div class="carousel sixteen columns">
+					<div class="promotions">
+					  <div class="promotions-item">
+					    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
+					    <div class="promotions-message">
+					      <h2>Adopt a lost or adoptable pet</h2>
+					      <p>Adopt a pet now and you will get another one <a href="#" title="Get a free pet">free</a>.</p>
+					    </div>
+					  </div>
+					  <div class="promotions-item">
+					    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" />
+					    <div class="promotions-message">
+					      <h2>Follow Snowfighter</h2>
+					      <p>For your latest storm updates, <a href="#" title="Follow Snowfighter">follow snowfighter</a>.</p>
+					    </div>
+					  </div>
+					  <div class="promotions-item">
+					    <img class="promotion-image" src="assets/img/carousel-walksafe.jpg" />
+					    <div class="promotions-message">
+					      <h2>Walk safe to your next destination</h2>
+					      <p>Make sure to follow crosswalks to ensure your safety, find out <a href="#" title="Find out more about walking safe">more information</a> about walking safe.</p>
+					    </div>
+					  </div>
+					  <div class="promotions-item">
+					    <img class="promotion-image" src="assets/img/carousel-stormwater.jpg" />
+					    <div class="promotions-message">
+					      <h2>Question about Stormwater?</h2>
+					      <p>Find out <a href="#" title="Find out more about walking safe">more information</a> about the baltimore county stormwater tax.</p>
+					    </div>
+					  </div>
+					  <div class="promotions-item">
+					    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
+					    <div class="promotions-message">
+					      <h2>Everyone Likes More Dogs</h2>
+					      <p>It's true, <a href="#" title="View more pets">find out more</a>.</p>
+					    </div>
+					  </div>
+					</div>
+				</div>
+			</section>
+		</div>
 		<div class="county-information">
 		<div class="county-information-container container">
 		
