Removed class to remove margins from carousel

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			  </div>
 			</div>
 			<section class="carousel-container container">
-				<div class="carousel sixteen columns">
+				<div class="carousel">
 					<div class="promotions">
 					  <div class="promotions-item">
 					    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
