Adjust text resizer styles to match psd

--- a/index.html
+++ b/index.html
@@ -49,18 +49,14 @@
 					</li>
 				</ul>
 				<div class="page-tools four columns">
-					<a href="">Subscribe</a>
-					<ul class="text-resizer inline-list">
-						<li class="decrease-text-size">
-							<a href="">a</a>
-						</li>
-						<li class="reset-text-size">
-							<a href="">a</a>
-						</li>
-						<li class="increase-text-size">
-							<a href="">a</a>
-						</li>
-					</ul>
+					<a href="#" class="subscribe" title="Subscribe to Baltimore County Newsletters">Subscribe</a>
+					<div class="resizer">
+					  <ul class="resizer-list inline-list">
+					    <li><a id="decrease-text" href="#" class="resizer-item resizer-item-smaller">a</a></li>
+					    <li><a id="reset-text" href="#" class="resizer-item resizer-item-default">a</a></li>
+					    <li><a id="increase-text" href="#" class="resizer-item resizer-item-larger">a</a></li>
+					  </ul>
+					</div>
 				</div>
 				</div>
 			</section>
@@ -154,7 +150,7 @@
 				</div>
 			</section>
 		</div>
-		<div class="county-information">
+		<div id="main-content" class="county-information">
 		<div class="county-information-container container">
 		
 		<section class="news-feed ten columns">
