Added big trees carousel image

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 					    </div>
 					  </div>
 					  <div class="promotions-item">
-					    <img class="promotion-image" src="assets/img/carousel-petadoption.jpg" />
+					    <img class="promotion-image" src="assets/img/carousel-bigtrees.jpg" />
 					    <div class="promotions-message">
-					      <h2>Everyone Likes More Dogs</h2>
-					      <p>It's true, <a href="#" title="View more pets">find out more</a>.</p>
+					      <h2>Big Trees Sale</h2>
+					      <p>Purchase trees for planting on private properties. <a href="#" title="Pre-order a big tree.">Pre-order trees</a> online today!</p>
 					    </div>
 					  </div>
 					</div>
