Updated footer columns
Match spacing to psd as well as heading.

--- a/index.html
+++ b/index.html
@@ -251,15 +251,18 @@
 		
 		<footer class="footer">
 			<section class="primary-footer container">
-			<section class="county-map four columns">
-				<img src="assets/img/footer-county-shape.png" alt="">
+			<section class="county-map-container seven columns">
+				<img src="assets/img/footer-county-shape.png" alt="" class="county-map">
+				<div class="county-address">
 					<h2>Baltimore County Government</h2>
 					<p>Historic Courthouse</br>
 					400 Washington Avenue</br>
 					Towson, MD 21204</p>
 					<p><a href="http://mapq.st/rqwGxR" title="Directions">Directions &gt;&gt;</a></p>
+				</div>
+				
 			</section>
-			<section class="county-help four columns">
+			<section class="county-help three columns">
 				<h2>Help</h2>
 				<ul class="county-help-list">
 					<li class="county-help-list-item">
@@ -273,7 +276,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="tranlate-page four columns">
+			<section class="tranlate-page three columns">
 				<h2>Translate</h2>
 				<ul class="translate-page-list">
 					<li class="american"><a title="English" href="http://baltimorecountymd.gov//">English</a></li>
@@ -294,7 +297,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="county-awards four columns">
+			<section class="county-awards three columns">
 				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
