--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
 					    </div>
 					  </div>
 					  <div class="promotions-item">
+					    <img class="promotion-image" src="assets/img/carousel-walkingtrails.jpg" />
+					    <div class="promotions-message">
+					      <h2>Walking Trails and Paths</h2>
+					      <p>Use our <a href="#" title="Follow Snowfighter">online search tool</a> to find walking trails and paths throughout Baltimore County.</p>
+					    </div>
+					  </div>
+					  <div class="promotions-item">
 					    <img class="promotion-image" src="assets/img/carousel-snowfighter.jpg" />
 					    <div class="promotions-message">
 					      <h2>Follow Snowfighter</h2>
