--- a/index.html
+++ b/index.html
@@ -318,22 +318,31 @@
 		</section>
 		<section class="secondary-footer">
 			<div class="container">
-			<section class="copyright eight columns">
+			<section class="copyright seven columns">
 				<span>&copy; Copyright 2015 Baltimore County Government</span>
 			</section>
-			<nav class="county-links eight columns">
+			<nav class="county-links nine columns">
 				<ul class="county-links-list inline-list">
 					<li class="county-links-list-item">
-						<a href="">Contact Baltimore County</a>
+						<a href="http://www.baltimorecountymd.gov/Contact/webmaster?issueid=42" title="Contact Baltimore County.">Contact Baltimore County</a>
 					</li>
 					<li class="county-links-list-item">
-						<a href="">User Terms</a>
+						<a href="http://www.baltimorecountymd.gov/UserGuide/usertermsconditions.html" title="Review the User Terms for the Baltimore County website.">User Terms</a>
 					</li>
 					<li class="county-links-list-item">
-						<a href="">Privacy</a>
+						<a href="http://www.baltimorecountymd.gov/UserGuide/usertermsconditions.html#privacy" title="Review the  Baltimore County privacy policy.">Privacy</a>
 					</li>
 					<li class="county-links-list-item">
-						<a href="">Jobs</a>
+						<a href="http://www.baltimorecountymd.gov/Agencies/humanresources/jobs/index.html" title="View Baltimore County job listings.">Jobs</a>
+					</li>
+					<li class="county-links-list-item">
+						<a href="http://www.baltimorecountymd.gov/UserGuide/sitemap.html" title="View the Baltimore County site map.">Site Map</a>
+					</li>
+					<li class="county-links-list-item">
+						<a href="http://www.baltimorecountymd.gov/Contact/webmaster?issueid=42" title="Send feedback to Baltimore County about its website.">Feedback</a>
+					</li>
+					<li class="county-links-list-item">
+						<a href="http://www.baltimorecountymd.gov/Agencies/ada/index.html" title="Learn more about Reasonable Accommodation.">Reasonable Accommodation</a>
 					</li>
 				</ul>
 			</nav>
