Added clarify for read more link in news

--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
     </li>
   </ol>
   </div>
-			<a href="" class="news-feed-read-more">Read More</a>
+  			<div class="clearfix">&nbsp;</div>
+			<a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow" class="news-feed-read-more">Read More From Baltimore County Now</a>
 		</section>
 		<section class="elected-officials six columns">
 			<section class="county-executive">
