alt text added to award images

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 					<p>Historic Courthouse</br>
 					400 Washington Avenue</br>
 					Towson, MD 21204</p>
-					<p><a href="http://mapq.st/rqwGxR" title="Directions">Directions &gt;&gt;</a></p>
+					<p><a href="http://mapq.st/rqwGxR" title="Get directions to Baltimore County.">Directions &gt;&gt;</a></p>
 				</div>
 				
 			</section>
@@ -309,10 +309,10 @@
 				<h2>Awards</h2>
 				<ul class="county-awards-list">
 					<li class="county-awards-list-item">
-						<img src="http://baltimorecountymd.gov/sebin/n/b/footer-map-digital-counties.jpg" alt="" />
+						<img src="http://baltimorecountymd.gov/sebin/n/b/footer-map-digital-counties.jpg" alt="Image of Digital Counties Survey logo." />
 					</li>
 					<li class="county-awards-list-item">
-						<img src="http://baltimorecountymd.gov/sebin/l/i/footer-map-botw.jpg" alt="" />
+						<img src="http://baltimorecountymd.gov/sebin/l/i/footer-map-botw.jpg" alt="Image of Best of The Web logo." />
 					</li>
 				</ul>
 			</section>
